Hardware in analysis

--- a/Rapport/Rapport.tex
+++ b/Rapport/Rapport.tex
@@ -35,7 +35,7 @@
 
 %% Kontekst %%
 %\include{kontekst/Theory}
-\include{kontekst/Hardware}
+%\include{kontekst/Hardware}
 \include{kontekst/DesignSpecification}
 \include{kontekst/Systemdesign}
 \include{kontekst/IncrementOne}
