--- a/Rapport/kontekst/DesignSpecification.tex
+++ b/Rapport/kontekst/DesignSpecification.tex
@@ -4,7 +4,7 @@ This chapter will present the requirements and the way they were conducted for t
 
 \section{System requirements}
 \label{sec:System requirements}
-The requirements for the project have been assembled through out several chapters. First in the Analysis chapter \ref{chap:Analysis}, the general requirements were set. Then in the Hardware chapter \ref{chap:Hardware}, the hardware would set some limitations for the project which lead to some more detailed requirements in the form of subrequirements.
+The requirements for the project have been assembled through out several chapters. The Analysis chapter \ref{chap:Analysis}, . the general requirements were set. Then in the Hardware section \ref{chap:Hardware}, the hardware would set some limitations for the project which lead to some more detailed requirements in the form of subrequirements.
 Through out the work with the robot problems occurred and the requirements therefore changed. The changes done to the requirements though out the project, can be seen in the increments found in the Appendixes (referer til de forskellige appendixes), where the requirements for the report will be the in the Evaluation chapter (ref her) in appendix (ref til sidste increment).
 
 The requirements for the project have been conducted thorugh out the whole process and changes were made accordingly, to adapt to the hardware's limations and the problems found. The requirements can be seen in the following paragraphs. 
