--- a/Rapport/intro/analysis.tex
+++ b/Rapport/intro/analysis.tex
@@ -41,7 +41,7 @@ Detecting and tracking the object are two very essential tasks, but are consider
 The catching phase is the phase in which the trash bin calculates the impact point, and moves to that specific point. The trash bin gets information about the thrown object, in this case the impact point, from the sensor and uses the given information to calculate the impact point. What data the trash bin gets from the sensor and how the calculation is done, will be explained in later chapters. 
 
 \section{Hardware}
-\label{chap:Hardware} 
+\label{sec:Hardware} 
 The following sections will describe the hardware considerations for the project, the hardware’s capabilities and it’s limitations. The limitations and capabilities will be in consideration when reviewing the requirements later in this chapter, to specify how the hardware can meet the requirements.
 
 \subsection{Sensors}
