--- a/Rapport/kontekst/Systemdesign.tex
+++ b/Rapport/kontekst/Systemdesign.tex
@@ -8,6 +8,10 @@
 %I system design skal vi også snakke om memory management evt ?? 
 %Skal vi skirve om den billede analyse som kinecten laver??
 
+\section{Hardware choices}
+\label{sec:Hardware choices}
+%Forklaring af de hardware valg vi har taget? Eller er dette nødvendigt?? Da vi snakkede lidt om det i Hardware sectionen.
+
 \section{Software choices}
 \label{sec:Software choices}
 %Hviket software vi bruger til at udvikle robotten og hvilke libraries vi bruger? SKal vi evt. have en section om Hardware choices? Skal vi skrive her at vi bruger Arduino's ide og at vi bruger 1.0.3??
@@ -37,7 +41,7 @@ The program have a setup and will loop the behavior of the robot. First the sets
 
 \section{Robot positioning and movement}
 \label{sec:Robot positioning and movement}
-%Kan indeholde hvordan vi har tænkt as med robottens kordinatsystem og hvordan den skal bevæge sig op i mod det punkt som den får fra kinecten.
+%Kan indeholde hvordan vi har tænkt os med robottens kordinatsystem og hvordan den skal bevæge sig op i mod det punkt som den får fra kinecten.
 
 \section{Connecting Arduino and Kinect}
 \label{sec:Connecting Arduino and Kinect}
