Arduino Wifi og Kinect connection (system design)

--- a/Rapport/bibtex/litteratur.bib
+++ b/Rapport/bibtex/litteratur.bib
@@ -92,3 +92,9 @@
 	title ={CD med bilag tilhørende B131}	
 }
 
+@manual{wg,
+	author ={Arduino.cc},
+	address = {\url{https://www.arduino.cc/en/Guide/ArduinoWiFiShield}},
+	title ={WifiGuide}	
+}
+
