Hardware choices bye bye

--- a/Rapport/kontekst/Systemdesign.tex
+++ b/Rapport/kontekst/Systemdesign.tex
@@ -8,17 +8,14 @@
 %I system design skal vi også snakke om memory management evt ?? 
 %Skal vi skirve om den billede analyse som kinecten laver??
 
-\section{Hardware choices}
-\label{sec:Hardware choices}
-%Forklaring af de hardware valg vi har taget? Eller er dette nødvendigt?? Da vi snakkede lidt om det i Hardware sectionen.
-
 \section{Software choices}
 \label{sec:Software choices}
 %Hviket software vi bruger til at udvikle robotten og hvilke libraries vi bruger? SKal vi evt. have en section om Hardware choices? Skal vi skrive her at vi bruger Arduino's ide og at vi bruger 1.0.3??
 
 \section{Robot design}
 \label{sec:Robot design}
-%Kkort om hvordan vi har lavet robotten? Vi kan evt. have noget med hvordan vi placere vores kinect i en subsection?
+%Kort om hvordan vi har lavet robotten? Vi kan evt. have noget med hvordan vi placere vores kinect i en subsection?
+
 
 \section{Arduino program design}
 \label{sec:Arduino program design}
