--- a/Rapport/kontekst/Systemdesign.tex
+++ b/Rapport/kontekst/Systemdesign.tex
@@ -18,7 +18,18 @@ After testing the Arduino IDE 1.6.12 with the code defined on the Arduino websit
 \section{Robot design}
 \label{sec:Robot design}
 %Kort om hvordan vi har lavet robotten? Vi kan evt. have noget med hvordan vi placere vores kinect i en subsection?
+The purpose of the robot is to catch the thrown object, by driving to the impact point of the object and the ground within the predefined area. The final design of the robot is shown in figure \ref{robot}.
 
+\begin{figure}[h]
+	\centering
+	\fbox{\includegraphics[scale=0.20]{billeder/robot}}
+	\caption{The final design of the robot}
+	\label{robot}
+\end{figure}
+
+The robot uses two LEGO NXT Servo motors with corresponding wheels, which will act as the front wheels. The back wheel can slide from side to side, which is important, since the wheel will be dragged sideways when the robots turns, a normal rubber wheel would have coursed a lot of friction. 
+The robot are build around the NXT Servo motors, and ends with a platform at the top. This platform is for the Arduino and its shield to be stripped onto and for the batteries for the motor shield. 
+The robot was build with  the arduino at the top, for easy access to the different pins if needed. 
 
 \section{Arduino program design}
 \label{sec:Arduino program design}
