--- a/Rapport/kontekst/Systemdesign.tex
+++ b/Rapport/kontekst/Systemdesign.tex
@@ -27,9 +27,9 @@ The purpose of the robot is to catch the thrown object, by driving to the impact
 	\label{robot}
 \end{figure}
 
-The robot uses two LEGO NXT Servo motors with corresponding wheels, which will act as the front wheels. The back wheel can slide from side to side, which is important, since the wheel will be dragged sideways when the robots turns, a normal rubber wheel would have coursed a lot of friction. 
-The robot are build around the NXT Servo motors, and ends with a platform at the top. This platform is for the Arduino and its shield to be stripped onto and for the batteries for the motor shield. 
-The robot was build with  the arduino at the top, for easy access to the different pins if needed. 
+The robot uses two LEGO NXT Servo motors with corresponding wheels, which will act as the front wheels. The back wheel can slide from side to side, which is important, since the wheel will be dragged sideways when the robots turns, whereas a normal rubber wheel would have caused a lot of friction. 
+The robot is build around the NXT Servo motors, and ends with a platform at the top. The Arduino is stripped to the platform, with the shields ontop. This ensures that the Arduino does not slide off the robots platform.
+The robot was build with the arduino at the top, for easy access to the different pins if needed. 
 
 \section{Arduino program design}
 \label{sec:Arduino program design}
