--- a/Rapport/kontekst/IncrementTwo.tex
+++ b/Rapport/kontekst/IncrementTwo.tex
@@ -40,7 +40,7 @@ In this section, the marked requirements should be fulfilled and will be describ
 \subsection{Wifi Shield}
 \label{sec:Wifi Shield SD}
 When the Kinect have found the coordinates for the collision point of the thrown object, these coordinates should be sent to the robot, for it to be able to move to the collision point and catch the object. 
-The data should be sent, as earlier mentioned in section \ref{sec: Arduino Wifi Shield}, by the Arduino wifi shield. The Arduino and the computer running the Kinect program, should be connected to their own network, with the computer sending data to the wifi shields IP-address.
+The data should be sent, as earlier mentioned in section \ref{sec: Arduino Wifi Shield}, to the Arduino wifi shield. The Arduino and the computer running the Kinect program should be connected to their own network, with the computer sending data to the wifi shields IP-address.
 
 \subsection{Robot positioning}
 \label{sec:Robot positioning System Design}
