--- a/Rapport/Rapport.tex
+++ b/Rapport/Rapport.tex
@@ -82,8 +82,9 @@
 
 %% Filer til appendiks %%
 
-\include{appendiks/appendiks1}
-
+\include{appendiks/Inc1}
+\include{appendiks/Inc2}
+\include{appendiks/Inc3}
 
 %%%% Bilag %%%%
 
