--- a/Rapport/Rapport.tex
+++ b/Rapport/Rapport.tex
@@ -38,9 +38,6 @@
 %\include{kontekst/Hardware}
 \include{kontekst/DesignSpecification}
 \include{kontekst/Systemdesign}
-\include{kontekst/IncrementOne}
-\include{kontekst/IncrementTwo}
-\include{kontekst/IncrementThree}
 \include{kontekst/implementation}
 \include{kontekst/tests}
 
@@ -85,6 +82,7 @@
 \include{appendiks/Inc1}
 \include{appendiks/Inc2}
 \include{appendiks/Inc3}
+\include{appendiks/ClockCycle}
 
 %%%% Bilag %%%%
 
