--- a/Rapport/kontekst/DesignSpecification.tex
+++ b/Rapport/kontekst/DesignSpecification.tex
@@ -32,6 +32,7 @@ The requirements for the project have been conducted thorugh out the whole proce
 	\item The robot should be able to move the trash bin, such that the thrown trash lands inside the bin
 	\begin{itemize}
 		\item {The robot should be able to turn and drive forward}
+		\item{The robot should be able to recognize the coordinates sent from the Kinect}
 	\end{itemize}
 	\item {The robot should be able to receive data from a computer, through a wireless network}
 \end{itemize}
