--- a/Rapport/kontekst/implementation.tex
+++ b/Rapport/kontekst/implementation.tex
@@ -1,2 +1,12 @@
 \chapter{Implementation}
 \label{chap:Implementation}
+This chapter will describe the implementation of the system. It will cover the description of the Microsoft Kinect, the robot's code and how the scheduling is done. 
+
+\section{Microsoft Kinect}
+\label{sec:Microsoft Kinect Implementation}
+
+\section{Robot}
+\label{sec:Robot}
+
+\section{Scheduling}
+\label{sec:Scheduling implementation}
